move admin css to extra file + bugfix: css/linkwidth: invisible links on protocol list

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -632,128 +632,6 @@ div.silmph__message_success {
 	88% 	{ -ms-transform: translate(1px,0px)	 rotate(-3deg);}
 	101% 	{ -ms-transform: translate(0px,0px)	 rotate(0deg); }
 }
-/* EMAIL SETTINGS =================================================*/
-.admin.mail_settings button, .admin.mail_settings input{
-	border-radius: 0;
-}
-.admin.mail_settings button {
-	display: inline-block;
-	background-color: #314885;
-	color: #fff;
-	font-weight: bold;
-	text-align: center;
-	border: 1px solid #E5891A;
-	height: 28px;
-	line-height: 28px;
-	margin-left: 5px;
-	vertical-align: bottom;
-	transition: background-color .2s, border .2s;
-}
-.admin.mail_settings button:hover,
-.admin.mail_settings button:active,
-.admin.mail_settings button:focus {
-	cursor: pointer;
-	border: 1px solid #314885;
-	background-color: #E5891A;
-}
-.admin.mail_settings input, .admin.mail_settings textarea {
-	height: 28px;
-	line-height: 28px;
-	font-weight: bold;
-	border: 1px solid #314885;
-	vertical-align: bottom;
-	padding-left: 5px;
-	width: 80%;
-}
-/* ----------- */
-.admin.mail_settings table tr th:nth-child(1){
-	text-align: left;
-	padding-left: 10px;
-	padding-right: 10px;
-}
-.editable.mail {
-	-ms-word-break: break-all;
-    word-break: break-all;
-	/* Non standard for webkit */
-     word-break: break-word;
-	display: inline-block;
-	padding:1px 20px 1px 5px;
-	margin-left: -6px;
-	border: 1px solid transparent;
-	min-width: 150px;
-}
-.editable.mail:hover,
-.editable.mail:active,
-.editable.mail:focus {
-	border: 1px solid gray;
-}
-.admin.mail_settings .footerline {
-	text-align: right;
-	padding-right: 20px;
-}
-.admin.mail_settings button.submit {
-	width: 100%;
-	width: calc(100% - 15px);
-	max-width: 250px;
-}
-/* RADIO TOGGLES ================================================*/
-div.radiogroup {
-	width: 140px;
-	border: 2px solid #E5891A;
-	border-radius: 0px;
-	padding: 0px;
-	background-color: #ddd;
-	overflow: hidden;
-	font-weight: bold;
-	position: relative;
-	height: 30px;
-}
-div.radiogroup input {
-	display: none;
-}
-div.radiogroup label {
-	display: inline-block;
-	height: 26px;
-    line-height: 23px;
-	font-size: 16px;
-	padding: 3px;
-    border: 0px solid transparent;
-    text-align: center;
-	border-left: 1px solid #E5891A;
-	border-right: 1px solid #E5891A;
-	vertical-align: top;
-	position: relative;
-	z-index: 20;
-	transition: color 0.3s;
-	cursor: pointer;
-}
-div.radiogroup.radiotoggle2 label {
-    width: 50%;
-}
-div.radiogroup.radiotoggle2 div {
-    width: 50%;
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	background-color: #173d92;
-	transition: left 0.2s ease-out;
-	z-index: 10;
-}
-div.radiogroup input:checked + label {
-	background-color: rgba(0,0,0,0.1);
-	color: #fff;
-}
-div.radiogroup label:hover, 
-div.radiogroup label:active,
-div.radiogroup label:focus {
-	background-color: rgba(0,0,0,0.2);
-}
-div.radiogroup.radiotoggle2 input:checked + label + input + label + div{
-	left: 0%;
-}
-div.radiogroup.radiotoggle2 input + label + input:checked + label + div{
-	left: 50%;
-}
 /* --------- SPINNING FONT AWESOME----------*/
 .multifa {
   font-size: 14px;
